=== master

* Make json_parser plugin handle case where Rack::Request#POST is called previously for env on Rack 3 (jeremyevans) (#372)

* Fix strict_unused_block warnings when running specs on Ruby 3.4 (jeremyevans)

= 3.87.0 (2024-12-17)

* Add host_routing plugin for routing based on request host header (jeremyevans)

* Do not write non-String to response body when using custom_block_results plugin (jeremyevans)

= 3.86.0 (2024-11-12)

* Add conditional_sessions plugin, for using the sessions plugin for only a subset of requests (jeremyevans)

* In permissions_policy plugin, add response.skip_permissions_policy! to avoid setting header (jeremyevans)

* Make Roda.freeze work if already frozen when using the autoload_{hash_branches,named_routes} plugins (jeremyevans)

* In content_security_policy plugin, add response.skip_content_security_policy! to avoid setting header (jeremyevans)

= 3.85.0 (2024-10-11)

* Avoid deprecation warning in public plugin when using Ruby 3.4.0-preview2 (jeremyevans)

* Evaluate class_matcher and symbol_matcher blocks in route-block context (jeremyevans)

* Allow class_matcher and symbol_matcher blocks to return non-arrays (jeremyevans)

* Make class_matcher and symbol_matcher plugin be able to build on top of existing registered matchers (jeremyevans)

* Make capture_erb plugin not break if String#capture is defined (jeremyevans)

= 3.84.0 (2024-09-12)

* Add hsts plugin for setting Strict-Transport-Security header (jeremyevans)

* Remove documentation from the gem to reduce gem size by 25% (jeremyevans)

= 3.83.0 (2024-08-12)

* Add assume_ssl plugin for making request ssl? method always return true (jeremyevans)

= 3.82.0 (2024-07-12)

* Add :encodings option to public plugin to support configurable encoding order (jeremyevans)

* Add :zstd option to public plugin to supplement it to serve zstd-compressed files with .zst extension (jeremyevans)

* Make capture_erb plugin call integrate better with erubi/capture_block (jeremyevans)
